--- a/Integrations/gh.mdx
+++ b/Integrations/gh.mdx
@@ -63,24 +63,25 @@ Permissions are set when you install the GitHub Devin app, and can always be adj
 
 Devin requires the following permissions
 
-- **Read** access to
-    - `dependabot alerts`: Allows Devin to resolve dependabot alerts on your behalf (i.e. bumping dependency versions)
-    - `actions`: Allows Devin to view the actions configured for a repository in order to understand if Devin’s changes pass CI
-    - `checks`: Allows Devin to view the checks configured for a repository in order to understand if Devin’s changes pass CI
-    - `commit statuses`: Allow Devin to view if a commit passes CI
-    - `deployments`: Allow Devin to view which versions of a repository were deployed
-    - `metadata`: Allow Devin to view crucial metadata about a repository such as who owns it
-    - `packages`: Allow Devin to view which versions of a repository were shipped as a package
-    - `pages`: Allow Devin to consult pages associated with a repository, e.g. to view documentation
-    - `repository advisories`: Allow Devin to view security advisories related to a repo in order to help fix security issues
-    - `repository hooks`: Allow Devin to view the hooks configured for a repository, e.g. linting and type checking
-    - `repository projects`: Allow Devin to view projects associated with a repository, e.g. to retrieve information about a task
-- **Read** and **write** access to
-    - `code`: Allow Devin to contribute to the codebase
-    - `discussions`: Allow Devin to contribute to discussions
-    - `issues`: Allow Devin to open new issues
-    - `pull requests`: Allow Devin to create new PRs
-    - `workflows`: Allow Devin to set up new workflows, e.g. to help configure CI/CD
+**Read** access to
+`dependabot alerts`: Allows Devin to resolve dependabot alerts on your behalf (i.e. bumping dependency versions)
+`actions`: Allows Devin to view the actions configured for a repository in order to understand if Devin’s changes pass CI
+`checks`: Allows Devin to view the checks configured for a repository in order to understand if Devin’s changes pass CI
+`commit statuses`: Allow Devin to view if a commit passes CI
+`deployments`: Allow Devin to view which versions of a repository were deployed
+`metadata`: Allow Devin to view crucial metadata about a repository such as who owns it
+`packages`: Allow Devin to view which versions of a repository were shipped as a package
+`pages`: Allow Devin to consult pages associated with a repository, e.g. to view documentation
+`repository advisories`: Allow Devin to view security advisories related to a repo in order to help fix security issues
+`repository hooks`: Allow Devin to view the hooks configured for a repository, e.g. linting and type checking
+`repository projects`: Allow Devin to view projects associated with a repository, e.g. to retrieve information about a task
+
+**Read** and **write** access to
+`code`: Allow Devin to contribute to the codebase
+`discussions`: Allow Devin to contribute to discussions
+`issues`: Allow Devin to open new issues
+`pull requests`: Allow Devin to create new PRs
+`workflows`: Allow Devin to set up new workflows, e.g. to help configure CI/CD
 
 We request these permissions so that Devin can work in your repository just as a regular contributor. Specifically, we permit Devin to push new branches, open PRs, and contribute to PR discussions, which is essential for Devin to productively contribute to your codebase.
 
