--- a/Integrations/slack.mdx
+++ b/Integrations/slack.mdx
@@ -43,13 +43,14 @@ Devin will respond in-thread to your session. Now, you can communicate back and 
 As usual, sessions without any response for 24 hours will automatically expire.
 
 ### Inline Slack Keywords & Functions
-
-`mute` → prevents Devin from sending further Slack messages.
-`unmute` → reverses the above.
-`(aside)` → causes Devin to ignore the message (useful for commenting on Devin’s run directly in-thread)
-`EXIT` → ends the session.
-`snapshot:<snapshot name>` → Use a particular snapshot with your run
-`playbook:<playbook-name>` → Use a particular playbook with your run
+| Keyword             | Function                                                                                    |
+| ------------------- | --------------------------------------------------------------------------------------------|
+| `mute`              | prevents Devin from sending further Slack messages                                          |
+| `unmute`            | reverses the above                                                                          |
+| `(aside)`           | causes Devin to ignore the message (useful for commenting on Devin’s run directly in-thread)|
+| `EXIT`              | ends the session                                                                            |
+| `snapshot:<snapshot name>`| Use a particular snapshot with your run                                               |
+| `playbook:<playbook-name>`| Use a particular playbook with your run                                               |
 
 ### Turn on Slack Notifications
 
