--- a/Integrations/gh.mdx
+++ b/Integrations/gh.mdx
@@ -1,6 +1,6 @@
 ---
 title: "GitHub Integration Guide"
-description: "Work with Devin in your favorite tools and applications"
+description: "Work with Devin directly in your repos"
 icon: 'github'
 ---
 
