--- a/Integrations/slack.mdx
+++ b/Integrations/slack.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Slack Integration Guide"
-description: "Work with Devin in your favorite tools and applications"
+description: "Chat and collaborate with Devin directly in your company Slack"
 icon: 'slack'
 ---
 
