--- a/Integrations/devin-tools.mdx
+++ b/Integrations/devin-tools.mdx
@@ -4,3 +4,5 @@ description: "Work with Devin in your favorite tools and applications"
 icon: 'toolbox'
 ---
 
+You can invite Devin to work in any tools or applications you work in - it's as simple as giving Devin the necessary credentials, API keys or tokens so it can work within those services through the Secrets Manager or when prompted to securely share the credential in the chat.
+
