--- a/Integrations/devin-tools.mdx
+++ b/Integrations/devin-tools.mdx
@@ -6,3 +6,20 @@ icon: 'toolbox'
 
 You can invite Devin to work in any tools or applications you work in - it's as simple as giving Devin the necessary credentials, API keys or tokens so it can work within those services through the Secrets Manager or when prompted to securely share the credential in the chat.
 
+Here are some of the common tools where Devin works with its users.
+<Frame>
+    ![Devin](/images/devin-tools.png)
+</Frame>
+
+For more details on Devin's integrations check out our GitHub and Slack integration guides:
+
+<CardGroup cols={2}>
+<Card title="GitHub" icon="github" href="Integrations/gh.mdx">
+  This is how you use a card with an icon and a link. Clicking on this card
+  brings you to the Card Group page.
+</Card>
+<Card title="Slack" icon="slack" href="Integrations/slack.mdx">
+  This is how you use a card with an icon and a link. Clicking on this card
+  brings you to the Card Group page.
+</Card>
+</CardGroup>
