--- a/Integrations/devin-tools.mdx
+++ b/Integrations/devin-tools.mdx
@@ -15,11 +15,8 @@ For more details on Devin's integrations check out our GitHub and Slack integrat
 
 <CardGroup cols={2}>
 <Card title="GitHub" icon="github" href="Integrations/gh.mdx">
-  This is how you use a card with an icon and a link. Clicking on this card
-  brings you to the Card Group page.
-</Card>
+    Connect your GitHub account to allow Devin to access, create pull requests and contribute to your existing repositories. 
 <Card title="Slack" icon="slack" href="Integrations/slack.mdx">
-  This is how you use a card with an icon and a link. Clicking on this card
-  brings you to the Card Group page.
+    Connect Devin to your company Slack and kick off runs directly via Slack by tagging @Devin. 
 </Card>
 </CardGroup>
