--- a/Integrations/devin-tools.mdx
+++ b/Integrations/devin-tools.mdx
@@ -16,6 +16,7 @@ For more details on Devin's integrations check out our GitHub and Slack integrat
 <CardGroup cols={2}>
 <Card title="GitHub" icon="github" href="Integrations/gh.mdx">
     Connect your GitHub account to allow Devin to access, create pull requests and contribute to your existing repositories. 
+</Card>
 <Card title="Slack" icon="slack" href="Integrations/slack.mdx">
     Connect Devin to your company Slack and kick off runs directly via Slack by tagging @Devin. 
 </Card>
