--- a/Get Started/quickstart.mdx
+++ b/Get Started/quickstart.mdx
@@ -12,8 +12,8 @@ icon: 'rocket'
   src="/images/Untitled.mp4"
 ></video>
 
-> ⭐ Refer to the following [step-by-step GitHub Integration Guide](https://www.notion.so/GitHub-Integration-Guide-f839572ed60a4d41ae2620c08c2fdb62?pvs=21) for more information.
-> 
+<Info>Refer to the following [GitHub Integration Guide](Integrations/gh) for more information</Info>
+
 1. Go to [Settings > Integrations](https://preview.devin.ai/settings/integrations) to begin setting up the GitHub integration and click on Connect
 
 2. Select the repo(s) you’d like to integrate, which you can do from the **Settings** page. 
