--- a/Onboard Devin/secrets.mdx
+++ b/Onboard Devin/secrets.mdx
@@ -16,7 +16,7 @@ Every now and then we may want Devin to access a protected web resource. While D
 
 However, other times you might prefer to store secrets that **persist** to future sessions. 
 
-This is now possible in the [Settings > Secrets](http://preview.devin.ai/settings/secrets)! Note that any secrets you share here will be usable by Devin in all future Devin sessions within your organization.  ****All secrets are encrypted at rest. **New secrets are only available to Devin in sessions created *after* you added the secret.**
+This is now possible in the [Settings > Secrets](http://preview.devin.ai/settings/secrets)! Note that any secrets you share here will be usable by Devin in all future Devin sessions within your organization.  All secrets are encrypted at rest. **New secrets are only available to Devin in sessions created *after* you added the secret.**
 
 There are 3 types of secrets available:
 
