--- a/Onboard Devin/secrets.mdx
+++ b/Onboard Devin/secrets.mdx
@@ -49,15 +49,14 @@ Notice how with cookies, when Devin navigates to the Resy website, Devin is alre
 1. Log in as you normally would to the account you'd like to share with Devin. This will generate cookie(s)!
 
 2. Get the cookie(s) from the browser store:
-    - 🟢 Easier Option
-        - Download the browser extension [Share your cookies](https://chromewebstore.google.com/detail/share-your-cookies/poijkganimmndbhghgkmnfgpiejmlpke)
-        - As shown in the video, (1) export the cookie using the extension (2) test that importing the cookie in another chrome profile works - meaning you become logged in after importing the cookie (3) add the cookie to the [Secrets page](https://preview.devin.ai/secrets)
+    - Download the browser extension [Share your cookies](https://chromewebstore.google.com/detail/share-your-cookies/poijkganimmndbhghgkmnfgpiejmlpke)
+    - As shown in the video, (1) export the cookie using the extension (2) test that importing the cookie in another chrome profile works - meaning you become logged in after importing the cookie (3) add the cookie to the [Secrets page](https://preview.devin.ai/secrets)
             
             [Screen Recording 2024-05-13 at 1.06.05 PM.mov](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/85600818-7777-471b-839e-47176dc92716/Screen_Recording_2024-05-13_at_1.06.05_PM.mov)
             
-3. When using cookies, Devin should find that it’s already logged in when it navigates to the site(s) that you provided cookies for (**note however that this is a beta feature, and may not work for some sites)**
+3. When using cookies, Devin should find that it’s already logged in when it navigates to the site(s) that you provided cookies for.
 
-Tell Devin through the chat something like: “**navigate to <WEBSITE> directly - you should already be logged in, but let me know if not”.** In the future, Devin will realize this itself, but currently it might not realize and ask you for credentials, unless you send this message!
+Tell Devin through the chat something like: “**navigate to `WEBSITE` directly - you should already be logged in, but let me know if not”.** In the future, Devin will realize this itself, but currently it might not realize and ask you for credentials, unless you send this message!
     
 
 ## One-Time Password
