--- a/Onboard Devin/secrets.mdx
+++ b/Onboard Devin/secrets.mdx
@@ -52,7 +52,11 @@ Notice how with cookies, when Devin navigates to the Resy website, Devin is alre
     - Download the browser extension [Share your cookies](https://chromewebstore.google.com/detail/share-your-cookies/poijkganimmndbhghgkmnfgpiejmlpke)
     - As shown in the video, (1) export the cookie using the extension (2) test that importing the cookie in another chrome profile works - meaning you become logged in after importing the cookie (3) add the cookie to the [Secrets page](https://preview.devin.ai/secrets)
             
-            [Screen Recording 2024-05-13 at 1.06.05 PM.mov](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/85600818-7777-471b-839e-47176dc92716/Screen_Recording_2024-05-13_at_1.06.05_PM.mov)
+<video
+  controls
+  className="w-full aspect-video"
+  src="/images/cookies.mov"
+></video>
             
 3. When using cookies, Devin should find that it’s already logged in when it navigates to the site(s) that you provided cookies for.
 
