--- a/Get Started/quickstart.mdx
+++ b/Get Started/quickstart.mdx
@@ -30,7 +30,7 @@ Ensure you are integrating the right GitHub organization with the right Devin ac
     ![Devin](/images/repo1.png)
 </Frame>
     
-2. Go to the menu on the top right hand corner of Devin’s Workspace and select **Use Devin’s Machine**. 
+2. Go to the menu on the top right hand corner of Devin’s Workspace and select [**Use Devin’s Machine**](Collaborate with Devin/machine). 
     
 <Frame>
     ![Devin](/images/repo2.png)
@@ -62,6 +62,8 @@ Ensure you are integrating the right GitHub organization with the right Devin ac
 <Frame>
     ![Devin](/images/snapshot2.png)
 </Frame>
+
+<Info>Check out the [Machine Snapshots](Onboard Devin/snapshots) guide for more information</Info>
 
 ## All Done!
 
