--- a/Get Started/quickstart.mdx
+++ b/Get Started/quickstart.mdx
@@ -30,7 +30,7 @@ Ensure you are integrating the right GitHub organization with the right Devin ac
     ![Devin](/images/repo1.png)
 </Frame>
     
-2. Go to the menu on the top right hand corner of Devin’s Workspace and select [Use Devin’s Machine](/Collaborate_with_Devin/machine). 
+2. Go to the menu on the top right hand corner of Devin’s Workspace and select [Use Devin’s Machine](Collaborate_with_Devin/machine). 
     
 <Frame>
     ![Devin](/images/repo2.png)
@@ -46,7 +46,7 @@ Ensure you are integrating the right GitHub organization with the right Devin ac
     
     1. Once the installation is complete, go back to the Devin session where you installed the repo  and click the “**Create machine snapshot**” button in the bottom right corner.
         
-        A [snapshot](/Onboard_Devin/snapshots) allows you to initialize new Devin instances from the snapshotted machine image. This will let you skip the installation steps going forward.
+        A [snapshot](Onboard_Devin/snapshots) allows you to initialize new Devin instances from the snapshotted machine image. This will let you skip the installation steps going forward.
         
 <Frame>
     ![Devin](/images/snapshot1.png)
@@ -63,7 +63,7 @@ Ensure you are integrating the right GitHub organization with the right Devin ac
     ![Devin](/images/snapshot2.png)
 </Frame>
 
-<Info>Check out the [Machine Snapshots](/Onboard_Devin/snapshots) guide for more information</Info>
+<Info>Check out the [Machine Snapshots](Onboard_Devin/snapshots) guide for more information</Info>
 
 ## All Done!
 
