--- a/Get_Started/devin-intro.mdx
+++ b/Get_Started/devin-intro.mdx
@@ -39,16 +39,16 @@ Devin is designed to be a conversational user interface, and allows you to follo
 In Devin’s Workspace, you’ll find: 
 
 <CardGroup cols={2}>
-  <Card title="Shell" icon="square-1">
+  <Card title="Shell" icon="square-terminal">
     a text-based interface where Devin can input commands that interact directly with a computer's operating system.
   </Card>
-  <Card title="Browser" icon="square-2">
+  <Card title="Browser" icon="browser">
     watch Devin browse through documentation, navigate through websites, download/upload upload information, and jump in to help Devin navigate thorough browsing tasks.
   </Card>
-  <Card title="Editor" icon="square-3">
+  <Card title="Editor" icon="rectangle-code">
     this is where Devin will write code. Here you can supervise, review and edit (see our [VSCode Guide](https://www.notion.so/bd89720db24e4f52bcd63489ff87e3fa?pvs=21)) the code Devin is writing.
   </Card>
-  <Card title="Planner" icon="square-4">
+  <Card title="Planner" icon="list-ol">
     this section provides you a running "to do" list that Devin laid out to complete the task. This gives you  visibility into how Devin plans and thinks through solving a problem.
   </Card>
 </CardGroup>
