--- a/Get_Started/quickstart.mdx
+++ b/Get_Started/quickstart.mdx
@@ -12,7 +12,7 @@ icon: 'rocket'
   src="/images/Untitled.mp4"
 ></video>
 
-<Info>Refer to the following [GitHub Integration Guide](Integrations/gh) for more information</Info>
+<Info>Refer to the following [GitHub Integration Guide](/Integrations/gh) for more information</Info>
 
 1. Go to [Settings > Integrations](https://preview.devin.ai/settings/integrations) to begin setting up the GitHub integration and click on Connect
 
@@ -30,7 +30,7 @@ Ensure you are integrating the right GitHub organization with the right Devin ac
     ![Devin](/images/repo1.png)
 </Frame>
     
-2. Go to the menu on the top right hand corner of Devin’s Workspace and select [Use Devin’s Machine](Collaborate_with_Devin/machine). 
+2. Go to the menu on the top right hand corner of Devin’s Workspace and select [Use Devin’s Machine](/Collaborate_with_Devin/machine). 
     
 <Frame>
     ![Devin](/images/repo2.png)
