--- a/release-notes.mdx
+++ b/release-notes.mdx
@@ -122,7 +122,7 @@ You can also enable Slack notifications for specific runs and Devin will private
 - “unmute” → reverses the above.
 - “(aside)” → causes Devin to ignore the message (useful for commenting on Devin’s run in-thread).
 - “EXIT” → ends the session.
-- snapshot:”<snapshot name>” → Use a particular snapshot with your run
-- playbook:<playbook-name> → Use a particular playbook with your run
+- snapshot:[snapshot-name] → Use a particular snapshot with your run
+- playbook:[playbook-name] → Use a particular playbook with your run
 
 Learn more here: [Slack Integration Guide](/Integrations/slack)
