--- a/release-notes.mdx
+++ b/release-notes.mdx
@@ -3,15 +3,15 @@ title: "Release Notes"
 icon: 'megaphone'
 ---
 
-## July 15, 2024
+### July 15, 2024
 
-## June 30, 2024
+### June 30, 2024
 
-## May 29, 2024
+### May 29, 2024
 
-## May 13, 2024
+### May 13, 2024
 
-### 📸 Machine Snapshot Startup Commands
+#### 📸 Machine Snapshot Startup Commands
 
 For a given machine snapshot, you can now **set a list of startup commands that will be run at the beginning of every run**. Some details:
 
@@ -23,13 +23,9 @@ For a given machine snapshot, you can now **set a list of startup commands that 
     ![Devin](/images/rn_snapshots1.png)
 </Frame>
 
-<Frame>
-    ![Devin](/images/rn_snapshots2.png)
-</Frame>
-
 Learn more about Machine Snapshots here: [Machine Snapshots Guide](/Onboard_Devin/snapshots) 
 
-### 🗒️ Command History
+#### 🗒️ Command History
 
 <Frame>
     ![Devin](/images/rn_command_history1.png)
@@ -46,7 +42,7 @@ With command history, you can easily see a list of all the commands that Devin r
     ![Devin](/images/rn_command_history2.png)
 </Frame>
 
-### 🔆 Keep Alive
+#### 🔆 Keep Alive
 
 Keep Alive will keep a session alive indefinitely, and will count against Technical Preview users’ daily quota.  Manually terminating a session will override Keep Alive.
 
@@ -56,7 +52,7 @@ Note that Keep Alive is useful for keeping any hosted services (devinapps.com li
     ![Devin](/images/rn_keepalive1.png)
 </Frame>
 
-### 🚨 Browser Notifications
+#### 🚨 Browser Notifications
 
 <Frame>
     ![Devin](/images/rn_notifs.png)
@@ -64,7 +60,7 @@ Note that Keep Alive is useful for keeping any hosted services (devinapps.com li
 
 Get notified when Devin sends you a message. You can find this under Settings > Profile.
 
-### ⏸️  Pause Devin
+#### ⏸️  Pause Devin
 
 <Frame>
     ![Devin](/images/rn_pause.png)
@@ -72,7 +68,7 @@ Get notified when Devin sends you a message. You can find this under Settings > 
 
 The new pause button is a shortcut and alternative to telling Devin to pause.
 
-### 👩‍💻 Open VS Code: Get full access to Devin’s machine
+#### 👩‍💻 Open VS Code: Get full access to Devin’s machine
 
 Open VS Code lets you read and edit files on Devin’s machine just like if you were working with Devin in VSCode. You can also open up a terminal in Devin’s machine, which means you have **full access** to Devin’s machine.
 
@@ -85,7 +81,7 @@ Open VS Code lets you read and edit files on Devin’s machine just like if you 
 
 Learn more here: [Interacting with Devin’s Machine](/Collaborate_with_Devin/machine)
 
-### 🔑 Cookies + Persisted Secrets
+#### 🔑 Cookies + Persisted Secrets
 
 With Persisted Secrets, any secrets that you add in the Settings page will be usable by Devin in all future Devin sessions.
 
@@ -96,7 +92,7 @@ Additionally, with site cookies, Devin will find that it's already logged in to 
 
 Learn more here: [Persisted Secrets + Site Cookies](/Onboard_Devin/secrets)
 
-### 🔒 [Organization Accounts] Unlist Sessions
+#### 🔒 [Organization Accounts] Unlist Sessions
 
 > This feature is only available to Organizations, not Technical Preview or Personal accounts
 > 
@@ -107,7 +103,7 @@ My default, all new sessions are visible to your Team (aka Organization). To mak
     ![Devin](/images/rn_rename.png)
 </Frame>
 
-### 💬 [Organization Accounts] Slack Integration
+#### 💬 [Organization Accounts] Slack Integration
 
 > This feature is only available to Organizations, not Technical Preview or Personal accounts
 > 
