--- a/release-notes.mdx
+++ b/release-notes.mdx
@@ -61,23 +61,22 @@ Note that Keep Alive is useful for keeping any hosted services (devinapps.com li
 Get notified when Devin sends you a message. You can find this under Settings > Profile.
 
 #### ⏸️  Pause Devin
+The new pause button is a shortcut and alternative to telling Devin to pause.
 
 <Frame>
     ![Devin](/images/rn_pause.png)
 </Frame>
 
-The new pause button is a shortcut and alternative to telling Devin to pause.
-
 #### 👩‍💻 Open VS Code: Get full access to Devin’s machine
 
 Open VS Code lets you read and edit files on Devin’s machine just like if you were working with Devin in VSCode. You can also open up a terminal in Devin’s machine, which means you have **full access** to Devin’s machine.
 
-💡 **Tip:** Combine VSCode with our [Machine Snapshots feature](/Onboard_Devin/snapshots) to set up everything Devin needs to be productive moving forward. One potential approach:
+<Tip>Combine VSCode with our [Machine Snapshots feature](/Onboard_Devin/snapshots) to set up everything Devin needs to be productive moving forward. One potential approach:
 
 - Tell Devin **“Run `pwd` and then pause. Do not do anything else.”**
 - **Open VSCode and open up a terminal** once Devin is paused
 - **Do any machine setup yourself** (install packages, configure repos, etc.)
-- **Create a snapshot.** Moving forward start sessions with this snapshot - all your future Devins will benefit from the setup you prepared!
+- **Create a snapshot.** Moving forward start sessions with this snapshot - all your future Devins will benefit from the setup you prepared!</Tip>
 
 Learn more here: [Interacting with Devin’s Machine](/Collaborate_with_Devin/machine)
 
@@ -112,13 +111,14 @@ Once you’ve connected Slack to your organization, you’ll be able to initiali
 
 You can also enable Slack notifications for specific runs and Devin will privately message you whenever there’s a status update. To do so, simply click the Slack icon at the top of any run you’d like to be notified for.
 
-**💡 Tips: Inline Slack keyboards**
+
+<Tip>Inline Slack keyboards**
 
 - “mute” → prevents Devin from sending further Slack messages.
 - “unmute” → reverses the above.
 - “(aside)” → causes Devin to ignore the message (useful for commenting on Devin’s run in-thread).
 - “EXIT” → ends the session.
 - snapshot:[snapshot-name] → Use a particular snapshot with your run
-- playbook:[playbook-name] → Use a particular playbook with your run
+- playbook:[playbook-name] → Use a particular playbook with your run</Tip>
 
 Learn more here: [Slack Integration Guide](/Integrations/slack)
