--- a/release-notes.mdx
+++ b/release-notes.mdx
@@ -9,6 +9,102 @@ icon: 'megaphone'
 
 ### May 29, 2024
 
+#### 📚 Playbooks Library
+
+You can now easily create, view and use playbooks by going to the **Devin app > Library > Playbooks.** You’ll be able to create playbooks for your personal use cases, and explore playbooks from the community. Any playbooks you create will be shared with your team.
+
+<Frame>
+    ![Devin](/images/rn_playbooks1.png)
+</Frame>
+
+You can click in any of your Team or Community Playbooks to see example runs as inspiration for how to use a given playbook.
+
+<Frame>
+    ![Devin](/images/rn_playbooks2.png)
+</Frame>
+
+#### 🖊️ Playbook Compiler
+
+With the playbook compiler, you can now quickly iterate on your playbook to make sure the format, structure and content are optimized for the best playbook session results. 
+
+💡 Tip:
+- Write your playbook in the **Content** on the left hand side
+- Click compile and review the newly formatted Playbook
+- You can always edit and update the compiled Playbook. When it’s ready, click create!
+
+<Frame>
+    ![Devin](/images/rn_playbooks3.png)
+</Frame>
+
+#### 🌐 Interactive Browser
+
+Interactive Browser allows users to directly use Devin’s browser. This feature is especially helpful for browser tasks where Devin may require assistance, such as completing CAPTCHAs, multifactor authentication steps and more. 
+
+<Frame>
+    ![Devin](/images/rn_interactivebrowser.png)
+</Frame>
+
+#### 🧠 Knowledge
+
+Knowledge is a collection of tips, instructions, and organizational context for Devin. You can continually add to Devin’s bank of knowledge over time, and Devin will automatically recall relevant knowledge as necessary.
+
+<Frame>
+    ![Devin](/images/rn_knowledge1.png)
+</Frame>
+
+You can easily add knowledge to Devin’s “knowledge bank”, or disable it if needed. 
+View when and how Devin is using Knowledge in any run’s progress updates.
+
+<Frame>
+    ![Devin](/images/rn_knowledge2.png)
+</Frame>
+
+#### 👁️‍🗨️ View Code Updates
+
+During a session, you can now click into Devin’s progress updates to view specific code edits Devin made while working through the sub-tasks. You can also view these directly from the Editor.
+
+<Frame>
+    ![Devin](/images/rn_codeupdates1.png)
+</Frame>
+
+Progress Updates View
+
+<Frame>
+    ![Devin](/images/rn_codeupdates2.png)
+</Frame>
+
+Editor Updates View
+
+Code updates will open a modal where you can track new code written by Devin up to that specific point in time in the session. 
+
+<Frame>
+    ![Devin](/images/rn_codeupdates3.png)
+</Frame>
+
+#### 💻 View Shell Updates
+
+During a session, you can now click into Devin’s progress updates to view specific shell commands Devin used while working through the sub-tasks. You can also view the Command History from the Shell.
+
+<Frame>
+    ![Devin](/images/rn_shellupdates1.png)
+</Frame>
+
+Progress View Shell Updates
+
+<Frame>
+    ![Devin](/images/rn_shellupdates2.png)
+</Frame>
+
+#### 💻 Shell Command History
+
+Shell updates will show you the full Command History and related outputs. You can easily copy a command and output by clicking on the three-dots icon. 
+
+Any commands that are italicized are commands run at a future point in time in the session, you can jump to different points in time in the session by clicking on different commands in the Command History section.
+
+<Frame>
+    ![Devin](/images/rn_shellupdates3.png)
+</Frame>
+
 ### May 13, 2024
 
 #### 📸 Machine Snapshot Startup Commands
