--- a/release-notes.mdx
+++ b/release-notes.mdx
@@ -162,7 +162,7 @@ The new pause button is a shortcut and alternative to telling Devin to pause.
     ![Devin](/images/rn_pause.png)
 </Frame>
 
-#### 👩‍💻 Open VS Code: Get full access to Devin’s machine
+#### 👩‍💻 Open VS Code: Access Devin’s machine
 
 Open VS Code lets you read and edit files on Devin’s machine just like if you were working with Devin in VSCode. You can also open up a terminal in Devin’s machine, which means you have **full access** to Devin’s machine.
 
@@ -186,7 +186,7 @@ Additionally, with site cookies, Devin will find that it's already logged in to 
 
 Learn more here: [Persisted Secrets + Site Cookies](/Onboard_Devin/secrets)
 
-#### 🔒 [Organization Accounts] Unlist Sessions
+#### 🔒 [Organizations] Unlist Sessions
 
 > This feature is only available to Organizations, not Technical Preview or Personal accounts
 > 
@@ -197,7 +197,7 @@ My default, all new sessions are visible to your Team (aka Organization). To mak
     ![Devin](/images/rn_rename.png)
 </Frame>
 
-#### 💬 [Organization Accounts] Slack Integration
+#### 💬 [Organizations] Slack Integration
 
 > This feature is only available to Organizations, not Technical Preview or Personal accounts
 > 
