--- a/release-notes.mdx
+++ b/release-notes.mdx
@@ -7,6 +7,36 @@ icon: 'megaphone'
 
 ### June 30, 2024
 
+<Accordion title="Universal Planner">
+  With Universal Planner, Devin can now more reliably perform long, multi-step tasks that require **looping** — in other words, tasks that require performing the same action multiple times — without needing to use Playbooks. 
+
+<Frame>
+    ![Devin](/images/rn_playbooks1.png)
+</Frame>
+
+Playbooks are still recommended for tasks and prompts that will be run multiple times or prompts that are helpful to share with your team. 
+</Accordion>
+
+
+<Accordion title="Devin got smarter!">
+
+Many of our improvements this week have been behind the scenes **improvements to Devin’s instruction following, editing, planning, and speed:**
+
+📚 Playbooks **no longer expect or require a rigid structure** (e.g. ## Procedure section is no longer needed)
+💬 Devin is a better **communicator!** When DevinAI makes notable deviations from the initial plan, it will inform you more reliably.
+🔢 Devin is less reliant on playbooks and can follow ad-hoc plans more effectively
+
+</Accordion>
+
+<Accordion title="Add secrets to library mid-session">
+
+Convenience improvement for secrets management:
+
+![Screenshot 2024-07-19 at 5.11.32 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/a9cd59d5-748b-4bdf-83ae-35adff3b8fe2/Screenshot_2024-07-19_at_5.11.32_PM.png)
+
+</Accordion>
+
+
 ### May 29, 2024
 
 #### 📚 Playbooks Library
